--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -45,8 +45,8 @@
     "N = 50\n",
     "d = 10\n",
     "nb_layers = 1\n",
-    "width = 2000\n",
-    "para = 1\n",
+    "width = 0\n",
+    "para = 10\n",
     "d_head = 10\n",
     "nb_head = 1         # This is the number of head per attention module, thus d_head%nb_head = 0.\n",
     "n_gram = 3\n",
@@ -135,7 +135,9 @@
     "Result: We find a scaling which is cubic. The scaling as expected to be at least quadratic, using the results from experiment 2 and 3. The scaling being cubic might suggest that experiment 3 had indeed optimization issues, which were uplifted by taking $d=d_h$.\n",
     "\n",
     "**Experiment 5**: we test the scaling of a Transformer with one attention head, and an MLP with varying width.\n",
-    "Result: we find that the accuracy, by parameter, of both the AoT and the MLP-based Transformer are equivalent."
+    "Result: we find that the accuracy, by parameter, of both the AoT and the MLP-based Transformer are equivalent.\n",
+    "\n",
+    "**Experiement 6**: we test the scaling in the setting of Corollary 1, with $d=2$. We find that our solution in that case is not optimal as the observed scaling is greater."
    ]
   },
   {
@@ -386,10 +388,10 @@
     "repetition = 2\n",
     "Data = generate_data(batch_size=batch_size, num_batch=num_batch, pi=pi, context_window=context_window)\n",
     "\n",
-    "for d in [5, 10, 13]:\n",
+    "for d, exp_num in zip([5, 7, 10, 13], [2, 4, 7, 10]):\n",
     "    d_head = d\n",
-    "    min_width = 2*d*1\n",
-    "    max_width = 2*d*26\n",
+    "    min_width = 2*d*(1-1)\n",
+    "    max_width = 2*d*(26-1)\n",
     "    step = 2*d*5\n",
     "\n",
     "    mean_accuracy = []\n",
@@ -428,7 +430,80 @@
     "\n",
     "    # We save the results as a dataframe.\n",
     "    data = pd.DataFrame(results)\n",
-    "    data.to_csv(f'Scaling laws/Data_exp_5_2.csv', index=False)"
+    "    data.to_csv(f'Scaling laws/Data_exp_5_{exp_num}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" Experiment 6. Scaling laws on H with N=10, d=2, d_head=5. \"\"\"\n",
+    "t.manual_seed(2222)\n",
+    "\n",
+    "# Model parameters.\n",
+    "N = 10\n",
+    "nb_layers = 1\n",
+    "nb_head = 1\n",
+    "n_gram = 3\n",
+    "context_window = n_gram\n",
+    "\n",
+    "# Distribution parameters.\n",
+    "alphas = [1, 1, 1]\n",
+    "nb_tokens=[100, 100, 1]\n",
+    "pi = power_unif_law(alphas, nb_tokens, N)\n",
+    "\n",
+    "# Training parameters.\n",
+    "batch_size=2**10\n",
+    "num_batch=1000\n",
+    "lr=1e-3\n",
+    "epochs=15\n",
+    "repetition = 3\n",
+    "Data = generate_data(batch_size=batch_size, num_batch=num_batch, pi=pi, context_window=context_window)\n",
+    "\n",
+    "# Scaling parameters\n",
+    "min_para=1\n",
+    "max_para=21\n",
+    "para_step=4\n",
+    "d=2\n",
+    "d_head=5\n",
+    "d_step=1\n",
+    "\n",
+    "mean_accuracy = []\n",
+    "para_list = []\n",
+    "N_list = []\n",
+    "d_list = []\n",
+    "d_head_list = []\n",
+    "\n",
+    "for para in tqdm(range(min_para, max_para+1, para_step)):\n",
+    "    accuracy = 0\n",
+    "\n",
+    "    for _ in range(repetition):\n",
+    "        model = AoT(d, N, nb_layers, para, d_head, nb_head, context_window, pi)\n",
+    "\n",
+    "        dict = train(model, Data, epochs, lr=lr, next_token=True)\n",
+    "        acc = sum(dict['Acc'][-101:-1])/100\n",
+    "            \n",
+    "        accuracy += acc\n",
+    "\n",
+    "    mean_accuracy.append(accuracy/repetition)\n",
+    "    N_list.append(N)\n",
+    "    d_list.append(d)\n",
+    "    d_head_list.append(d_head)\n",
+    "    para_list.append(para)\n",
+    "\n",
+    "results = {\n",
+    "    'acc': mean_accuracy,\n",
+    "    'para': para_list,\n",
+    "    'N': N_list,\n",
+    "    'd': d_list,\n",
+    "    'd_head': d_head_list,\n",
+    "}\n",
+    "\n",
+    "# We save the results as a dataframe.\n",
+    "data = pd.DataFrame(results)\n",
+    "data.to_csv(f'Scaling laws/Data_exp_6.csv', index=False)"
    ]
   }
  ],
