--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -248,8 +248,8 @@
     "Data = generate_data(batch_size=batch_size, num_batch=num_batch, pi=pi, context_window=context_window)\n",
     "\n",
     "# Scaling parameters\n",
-    "min_d_head = 5\n",
-    "max_d_head = 15\n",
+    "min_d_head = 1\n",
+    "max_d_head = d\n",
     "d_head_step = 1\n",
     "\n",
     "mean_accuracy = []\n",
@@ -289,9 +289,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [03:21<00:00, 20.18s/it]\n",
+      "100%|██████████| 10/10 [03:19<00:00, 19.95s/it]\n",
+      "100%|██████████| 10/10 [03:20<00:00, 20.09s/it]t]\n",
+      "100%|██████████| 10/10 [03:20<00:00, 20.08s/it]\n",
+      "100%|██████████| 10/10 [03:22<00:00, 20.26s/it]t]\n",
+      "100%|██████████| 10/10 [10:24<00:00, 62.42s/it]\n",
+      "100%|██████████| 10/10 [03:22<00:00, 20.21s/it]t]\n",
+      "100%|██████████| 10/10 [03:38<00:00, 21.81s/it]\n",
+      "100%|██████████| 10/10 [04:02<00:00, 24.21s/it]t]\n",
+      "100%|██████████| 10/10 [03:39<00:00, 22.00s/it]\n",
+      "100%|██████████| 10/10 [03:30<00:00, 21.10s/it]  \n",
+      "100%|██████████| 10/10 [03:41<00:00, 22.13s/it]\n",
+      "100%|██████████| 10/10 [51:35<00:00, 309.53s/it]\n",
+      "100%|██████████| 10/10 [37:51<00:00, 227.18s/it]\n",
+      "100%|██████████| 10/10 [41:01<00:00, 246.16s/it]/it]\n",
+      "100%|██████████| 10/10 [53:17<00:00, 319.70s/it]\n",
+      "100%|██████████| 10/10 [59:37<00:00, 357.72s/it]/it]\n",
+      "100%|██████████| 10/10 [1:07:51<00:00, 407.19s/it]\n",
+      "100%|██████████| 10/10 [19:00<00:00, 114.03s/it]/it]\n",
+      "100%|██████████| 10/10 [36:44<00:00, 220.49s/it]\n",
+      "100%|██████████| 10/10 [53:08<00:00, 318.86s/it]s/it]\n",
+      "100%|██████████| 10/10 [37:51<00:00, 227.15s/it]\n",
+      "100%|██████████| 11/11 [8:27:05<00:00, 2765.93s/it]  \n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" Experiment 3. Scaling laws on  d, with d_head and H (=para) fixed. \"\"\"\n",
     "t.manual_seed(3333)\n",
@@ -320,7 +350,7 @@
     "\n",
     "# Scaling parameters\n",
     "min_d = 5\n",
-    "max_d = 25\n",
+    "max_d = 15\n",
     "d_step = 1\n",
     "\n",
     "mean_accuracy = []\n",
